<resources>
    <string name="app_name">MMA TODAY</string>


    <string name="action_settings">Settings</string>
    <string name="action_ufc_fighters">UFC Fighters</string>
    <string name="news">News</string>
    <string name="all_time_ranks">All time ranks</string>
    <string name="octagon_girls">Octagon girls</string>
    <string name="quiz">Quizzes</string>

    <string name="hello_world">Hello world!</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string-array name="men_weightclass_array">
        <item>Flyweight</item>
        <item>Bantamweight</item>
        <item>Featherweight</item>
        <item>Lightweight</item>
        <item>Welterweight</item>
        <item>Middleweight</item>
        <item>Light Heavyweight</item>
        <item>Heavyweight</item>
    </string-array>
    <string-array name="women_weightclass_array">
        <item>Women Strawweight"</item>
        <item>Women Bantamweight</item>
    </string-array>

    <string-array name="all_time_rank_array">
        <item>Absolute</item>
        <item>Women"</item>
        <item>Heavyweight</item>
        <item>Light Heavyweight</item>
        <item>Middleweight</item>
        <item>Welterweight</item>
        <item>Lightweight</item>
        <item>Featherweight</item>
        <item>Bantamweight</item>
        <item>Flyweight</item>
    </string-array>


    <string-array name="octagon_girls_bios">
        <item>Arianny Celeste became a UFC Octagon Girl in typical fashion through a modeling casting call - but ever since she made her debut at the Hard Rock Hotel and Casino in 2006, life has been anything but typical for Celeste, who saw her first live mixed martial arts fight that summer night in Las Vegas.\n\'It was nerve racking and kinda scary, but it was really cool\', said Arianny of her first night working for the UFC\'I liked it a lot.\' \nSince then, this striking Latina has become a fixture at UFC events and a fan favorite. She\'s also transformed from a casual fan of MMA to a diehard follower of the sport.</item>
        <item>\'When I was 16 I started modeling…it was more of a hobby than anything. When I was 18, I sent in photos to agencies and began working immediately. My first job modeling was with a real estate infomercial. It was a lot of fun and I got bit by the modeling bug.\nI was contacted by a lot of the modeling agencies locally and one thing led to another.At first most of my gigs were swimwear shoots. I finally got a break when FORD motor company asked me to do modeling for them full time. Next was TV. I appeared on the Carson Daly show, the Nick and Jessica Variety show, and the WB Morning show. Furthermore, I was in an independent movie called "Vegas, Baby" with Chuck Liddell. \nWhen I built up my resume I wasn’t sure where I wanted my career to go, and then the UFC® was introduced to me.It was my second time working as a Octagon girl™ at a boxing match and the press took my photo and posted it on an MMA website. James Pena (trainer with UFC®) approached me and told me the UFC® was looking for a new Octagon Girl™ and would I try out. Of course, my answer was yes and I gave him my card and received an email immediately from the company. I went in for an interview and have been with UFC® ever since. Time flies by, and this is the most fun I’ve ever had.\'</item>
        <item>\'My favorite things about being an Octagon Girl are the traveling and the fans\'</item>
        <item>Carly was invited to be a speaker at one of the top prestigious Universities in Ireland UCD for a Debate. Appeared on CTN TV.Carly was a beauty queen for Miss Great Britian, representing Wimbledon.\nCarly is a TV presenter, her credits are LG, Nuts TV, Loaded TV and being Guest presenter on the hit radio station Talk Sport for Sports Bar with Andy Goldstein, Jason Cundy and Bobby Gould.Carly was The Face of LG Optimus 3D Smart Phone.Carly was cast as Sonya Blade for Mortal Kombat and traveled Europe.Carly Played lead Actress in the hit music video for Professor Green \'I need you tonight\'.Dancer for Wretch 32.Carly is studying Fitness and Nutrition.</item>
        <item>\'I love the traveling, the fans and of course all of the action!\'</item>
        <item>\'I\'m so excited to be involved with one of the biggest and best fight promotion companies in the world.\'</item>
        <item>An artist since she was a child, the beauty started to shine at 6 years old. Doubling as a Brazilian presenter in Brazil, she was such a big success in Riberto Preto that she presented for a local show for kids.This was just the first round in Jhenny\'s life.\nAfter that there were fashion shows, lingerie photo shoots for famous brands, TV commercials and much more. When she was 18 she decided to move to Saint Paulo. The dream of the big city was scary but also exciting.In Saint Paulo, Jhenny got an invitation to write for VIP magazine, one of the most prestigious men\'s magazine in the country. In her column named-The Perfect Girlfriend-she told experiences of how men saw the perfect woman. \nWith all that it was time to wear the UFC belt. Jhenny was picked to be part of the octagon girls team. As she says herself,\'in the beginning it was all new and different. Today I am part of the delicious adrenaline and I am in love with fighting.\'</item>
        <item>Model since she was 16, the muse of the UFC has shined on television commercials, posed for famous brands and is required for runway shows.The opportunity came in the UFC came early in 2013. Camila remembers that her first appearance in the UFC wasn’t one of the best. Very patriotic, she was on the UFC 162 card and saw Anderson Silva lose his belt. “I just cried”, she says.\nThe hottie stands out even more for her involvement in the social actions of the UFC.  \'Helping people is something wonderful\', she says. The brunet fondly remembers when she planted a tree in her name on Fight Night Fortaleza.</item>
        <item>Andrade is all about healthy eating and regular physical activity. Her motto is: "Healthy body, healthy mind".Passionate about her family and pets, the Curitiba-born Octagon girl finds in her parents and two sisters the support to chase her goals.\nLuciana Andrade hails from Curitiba, Brazil. The 28-year-old graduated from Law School and worked in the judicial area for nine years. The beautiful brunette also has years of experience working as a model.Being part of the UFC Beauties team, the Octagon Girl hopes to get more opportunities in the artistic area, and says she is willing to get every opportunity with determination, which is her strongest feature.</item>
        <item>A native of Mazatlan, Mexico, Jamilette Gaxiola first entered the consciousness of UFC fans through season one of The Ultimate Fighter Latin America and UFC 180: Werdum vs. Hunt in Mexico City. Jamilette returned to the UFC on the second season of The Ultimate Fighter Latin America set to air this August and on June 13 at UFC 188 in Mexico City.A stunning raven-haired beauty, Jamillette began competing in beauty pageants at an early age, and by the time she was 18, she was crowned Miss Cuba and also held second place in the Senorita Republica Deportiva competition on Univision.</item>
        <item>\'Dream for the imposible, It just might happen\'\nBorn in Quezon City and spending much of her early Childhood in the Province of Zambales Red shared the dreams of many young Filipinas of Performing and being famous.One day After Studying Tourism at Far Eastern University, Red embarked on a modelling career after being approached by numerous photographers and publishers. \nAfter appearing in many local and international magazines as well as being the number one Ring Girl in a local MMA Organisation, Red developed a real following on Social Media and now has millions of Fans on Facebook, Twitter, Instagram and Youtube.Her fans and followers are her priority. Through her close affinity with her followers she was voted in FHM\'100 Sexiest Women in the World for three straight years being #52 in 2013, #81 in 2014 and #71 in 2015.</item>
    </string-array>


</resources>
