<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ashley.mmatoday.MainActivity">
    <item
        android:id="@+id/ufcFightersListItem"
        android:title="@string/action_ufc_fighters"
        app:showAsAction="never" />
    <item
        android:id="@+id/newsItem"
        android:title="@string/news"
        app:showAsAction="never" />
    <item
        android:id="@+id/allTimeRanksItem"
        android:title="@string/all_time_ranks"
        app:showAsAction="never" />
    <item
        android:id="@+id/octagonGirlsItem"
        android:title="@string/octagon_girls"
        app:showAsAction="never" />
    <item
        android:id="@+id/quizzesItem"
        android:title="@string/quiz"
        app:showAsAction="never" />
</menu>
